feat: implement ZaloPay payment integration with Redis slot locking
- Add ZaloPay dynamic QR payment integration
  - Create order via ZaloPay API
  - Generate QR code (base64) for Flutter mobile apps
  - Verify callback and auto-confirm bookings
  - Query payment status from ZaloPay

- Implement Redis-based time slot locking
  - 10-minute TTL lock during payment window
  - Prevent double-booking while user is paying
  - Atomic lock acquisition with SET NX

- Add WebSocket real-time notifications
  - Subscribe to payment updates
  - Instant notification on payment success/failure
  - Flutter-compatible WebSocket protocol

- Database changes
  - Add Payment model with ZaloPay transaction tracking
  - Add zpTransToken for mobile SDK support

- Docker Compose
  - Add Redis service

New files:
- src/services/zalopay.service.ts
- src/services/payment.service.ts
- src/services/redis.service.ts
- src/services/qrcode.service.ts
- src/services/websocket.service.ts
- src/controllers/payment.controller.ts
- src/routes/payment.routes.ts
- src/repositories/payment.repository.ts
- src/types/payment.types.ts

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-﻿PORT=3000
+﻿## Database Configuration
+PORT=3000
 NODE_ENV=development
 DB_USER=postgres
 DB_PASSWORD=postgres
@@ -7,3 +8,16 @@ DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/arc_badminton?schema=public
 TILE_SERVER_URL=http://localhost:7800
+
+## Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+SLOT_LOCK_TTL_SECONDS=600
+
+## Zalopay Configuration
+ZALOPAY_APP_ID=your_app_id
+ZALOPAY_KEY1=your_key1
+ZALOPAY_KEY2=your_key2
+ZALOPAY_ENDPOINT=https://sb-openapi.zalopay.vn
+ZALOPAY_CALLBACK_URL=https://127.0.0.1:3000/api/payments/callback
