--- a/package.json
+++ b/package.json
@@ -36,13 +36,18 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.0.0",
-    "http-proxy-middleware": "^3.0.3"
+    "http-proxy-middleware": "^3.0.3",
+    "ioredis": "^5.8.2",
+    "qrcode": "^1.5.4",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.10.1",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "prisma": "^6.8.2",
