--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "http-proxy-middleware": "^3.0.3",
     "ioredis": "^5.8.2",
     "qrcode": "^1.5.4",
-    "ws": "^8.18.3"
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.3",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
@@ -47,6 +49,7 @@
     "@types/node": "^24.10.1",
     "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
