--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^6.8.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase-admin": "^13.6.0",
     "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3",
     "ioredis": "^5.8.2",
