feat: implement exchange matches with payment system
Features:
- Exchange match creation, listing, and management
- Public/private match support
- Match join requests with approval workflow
- ZaloPay payment integration for match joins (100% upfront)
- Match player management with statuses (PENDING, PENDING_PAYMENT, ACCEPTED, REJECTED, LEFT, EXPIRED)
- Payment expiration scheduler for pending match joins (15 min timeout)
- WebSocket notifications for match events and payments
- FCM push notifications for match join requests and responses

Fixes:
- Fixed 500 error on GET /api/matches/hosted (added host include)
- Fixed null-safety issues in match service
- Aligned enums in OpenAPI with Prisma schema
- Added error codes to error responses

API Changes (v2.3.0):
- POST /api/matches - Create new match
- GET /api/matches - List matches with filters
- GET /api/matches/:id - Get match details
- PUT /api/matches/:id - Update match
- DELETE /api/matches/:id - Delete match
- GET /api/matches/hosted - Get user's hosted matches
- POST /api/matches/:id/join - Join a match
- GET /api/matches/joined - Get matches user joined
- GET /api/matches/:id/players - Get match players
- PUT /api/matches/:id/players/:playerId - Respond to join request
- POST /api/matches/:id/payment - Create payment for match join
- GET /api/matches/:id/payment/:paymentId/status - Query payment status

Database:
- Added Match, MatchPlayer tables
- Extended Payment model for match payments
- Added FCM tokens to User table
- New Prisma enums: PaymentType, MatchPlayerStatus values

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,4 @@ junit.xml
 *.junit.xml
 
 # Firebase Service Account
-smatch-badminton-firebase-adminsdk-fbsvc-b4ea537d9e.json
-
+smatch-badminton-firebase-adminsdk-fbsvc-*.json
